Projekt/k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        args: ["--dbpath","/data/db"]
        volumeMounts:
        - name: "pv-dir"
          mountPath: "/data/db"
      volumes:
      - name: "pv-dir"
        persistentVolumeClaim:
          claimName: "pvc"
