Projekt/k8s/client-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
      #protocol: TCP
