Projekt/k8s/mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-service
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
    #nodePort: 32000
  selector:
    app: mongo
  #type: NodePort
status:
  loadBalancer: {}
