Projekt/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis-cluster-ip-service
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
    #nodePort: 32001
  selector:
    app: redis
  #type: NodePort
status:
  loadBalancer: {}
