Projekt/k8s/server-mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
metadata:
  name: server-mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
